# hacknation-hackathon-4

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  app.py  pyproject.toml  requirements.txt  start_app.sbatch  start_app_trt.sbatch  world2data-trt.def  world2data.def
core/: base.py  registry.py  types.py  video.py
models/: __init__.py  _rfdetr_compat.py
models/detection/: rfdetr.py  yolo11.py  yolov8.py
models/segmentation/: fastsam.py  rfdetr_seg.py  sam3.py
models/state/: siglip_classifier.py
models/tracking/: yolo_tracker.py
models/vlm/: lfm25.py
outputs/open-door_hands/: door_stream.jsonl  events.json  frame_stream.jsonl  metrics.json
outputs/session/: summary.json
outputs/session_detect/: summary.json  tracks.json
pages/: live.py
pipeline/: evaluator.py  exporter.py  interactions.py  nav_state.py  runner.py  visualizer.py
scripts/: dev.sh
src/world2data_cam/: __init__.py  __main__.py  capture.py  cli.py  detect.py  export.py  hands_contact.py
